fix: add vertical align to the rows to prevent 4 pixels from being added to the bottom

--- a/foundations/js-basics/etch-a-sketch/styles/main.css
+++ b/foundations/js-basics/etch-a-sketch/styles/main.css
@@ -8,4 +8,5 @@
     height: 50px;
     width: 50px;
     border: 1px solid black;
+    vertical-align: top;
 }
